--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "react": "15.2.1",
-    "react-native": "0.29.2"
+    "react-native": "0.29.2",
+    "react-timer-mixin": "^0.13.3"
   }
 }
